# ETHGlobal-Cannes2025

./: README.md
agent/agent/: main.py  mypy.ini  pyproject.toml  run
agent/agent/src/: main.py
agent/agent/src/agent/: crew.py  main.py
agent/elara-wrapper/: example_usage.py  mypy.ini  pyproject.toml
agent/runtime/: create_disk_image.sh  init0.sh  init1.py  loading.html  update_inits.sh
agent/ui/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
agent/ui/src/components/: chat-input.tsx  chat-message.tsx  wallet-sync.tsx
agent/ui/src/config/: env.ts
agent/ui/src/routes/: __root.tsx  index.tsx
agent/ui/src/services/: api.ts
agent/ui/src/stores/: agent.ts  chat.ts  wallet.ts
agent/ui/src/types/: chat.ts
backend/: .env.example  docker-compose.yaml  pyproject.toml
backend/src/: config.py  main.py
backend/src/utils/: logger.py
contracts/ens/: L2Registrar.sol
front/: .env.example  get-ipfs-contenthash.js  index.html  package-lock.json  package.json  vite.config.ts
front/src/: main.tsx  routeTree.gen.ts
front/src/apis/backend/: sdk.gen.ts  types.gen.ts
front/src/components/: navbar.tsx  wallet-sync.tsx
front/src/components/ui/: form.tsx
front/src/config/: ens.ts  env.ts  thirdweb.ts
front/src/routes/: __root.tsx  create-agent.tsx  index.tsx
front/src/stores/: wallet.ts
front/src/utils/: ensAvailability.ts
