[project]
name = "agent"
version = "0.1.0"
description = "agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = ["crewai[tools]>=0.140.0,<1.0.0", "fastapi[standard] (>=0.115.14,<0.116.0)", "elara-wrapper (>=0.0.2,<0.0.3)"]

[project.scripts]
agent = "agent.main:run"
run_crew = "agent.main:run"
train = "agent.main:train"
replay = "agent.main:replay"
test = "agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
