[project]
name = "agent"
version = "0.1.0"
description = "agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.11,<=3.13"
dependencies = ["elara-wrapper (>=0.0.10)", "libertai-agents (==0.2.0a1)"]

[project.scripts]
agent = "agent.main:run"
run_crew = "agent.main:run"
train = "agent.main:train"
replay = "agent.main:replay"
test = "agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poetry]
package-mode = false
